# fermata-music-app

./: .dockerignore  .env.example  .gitignore  CDN_SETUP_GUIDE.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  admin_backend_status.txt  app.py  docker-compose.yml  implementation_plan.md  init.bat  pyproject.toml  requirements.txt
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
agentic_ai/: README.md  requirements.txt
agentic_ai/src/: graph.py  nodes.py  state.py
agentic_ai/tests/: run.py  test_flow.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_track_audio_file_key.py  003_add_refresh_token.py  004_add_cover_image_keys.py  005_allow_standalone_single_tracks.py  006_add_playlist_cover_image_key.py  007_add_user_liked_albums.py  0be27618d4cf_add_hls_storage_keys.py  12e4f15eb5ae_add_roles_and_artist_user_id.py  1d102cb8c9a2_add_genres_to_tracks_and_ingestion_.py  3ae701cc923c_add_cover_url_to_ingestion_request.py  4a428744b6df_add_created_at_and_updated_at_timestamps.py  754d94fddce2_add_full_name_to_users.py  e383c25fa183_add_lyrics_to_tracks_and_ingestion_.py  e3c23a7e5812_add_name_to_admins.py  (+1 more)
app/: main.py
app/core/: cache.py  (+7 more)
docs/: ARCHITECTURE.md  HLS Workflow.md  WORKFLOW.md  spotify_api_reference.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
tests/: conftest.py  test_auth.py  test_endpoints.py  test_health.py  test_rate_limiter.py  test_role_promotion.py  test_search.py  test_search_playlists.py  test_tokens.py  test_track_audio.py  test_uploads.py
(+105 files in other folders)
