[project]
name = "fermata-backend"
version = "0.1.0"
description = "Production-ready music streaming backend powered by FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "passlib>=1.7.4",
    "argon2-cffi>=21.3.0",
    "pyjwt>=2.8.0",
    "pwdlib[argon2]>=0.3.0",
    "pytest>=9.1.1",
    "boto3>=1.28.0",
    "gradio>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
